[gd_scene load_steps=8 format=3 uid="uid://d013h3og61ea2"]

[ext_resource type="Script" path="res://pages/menu_principal/MainMenu.gd" id="1_ai6pd"]
[ext_resource type="FontFile" uid="uid://yt2613vljm7s" path="res://res/Merriweather/Merriweather-Italic.ttf" id="1_cuyiy"]
[ext_resource type="Texture2D" uid="uid://csfumuixporbi" path="res://res/Flags/fr.svg" id="3_ihvs5"]
[ext_resource type="FontFile" uid="uid://bsr8nhufh0a8q" path="res://res/Merriweather/Merriweather-Regular.ttf" id="4_2f6tj"]
[ext_resource type="Texture2D" uid="uid://bughjxo6wga5s" path="res://res/Flags/es.svg" id="4_625v4"]

[sub_resource type="LabelSettings" id="LabelSettings_irfoa"]
font = ExtResource("4_2f6tj")
font_size = 40
outline_size = 5
outline_color = Color(0, 0, 0, 1)

[sub_resource type="StyleBoxLine" id="StyleBoxLine_fr8l7"]
color = Color(0, 0, 0, 0.85098)
thickness = 2

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_ai6pd")

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="CenterContainer" type="CenterContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer"]
layout_mode = 2
alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="Titre" type="Label" parent="CenterContainer/VBoxContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.74902, 0.705882, 1, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_offset_x = 2
theme_override_constants/shadow_offset_y = 2
theme_override_constants/outline_size = 4
theme_override_constants/shadow_outline_size = 2
theme_override_font_sizes/font_size = 35
text = "NaLang"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Signature" type="Label" parent="CenterContainer/VBoxContainer/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("1_cuyiy")
text = "by Nathan Cerisara"
horizontal_alignment = 2
vertical_alignment = 1

[node name="HSeparator" type="HSeparator" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 50

[node name="RichTextLabel" type="RichTextLabel" parent="CenterContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 52)
layout_mode = 2
text = "Apprenez de nouvelles langues plus facilement !"

[node name="HSeparator3" type="HSeparator" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 50

[node name="VBoxContainer2" type="VBoxContainer" parent="CenterContainer/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="CenterContainer/VBoxContainer/VBoxContainer2"]
layout_mode = 2
text = "Langue d'apprentissage sélectionnée : "

[node name="HBoxContainer2" type="HBoxContainer" parent="CenterContainer/VBoxContainer/VBoxContainer2"]
layout_mode = 2
theme_override_constants/separation = 25
alignment = 1

[node name="Lang1" type="TextureRect" parent="CenterContainer/VBoxContainer/VBoxContainer2/HBoxContainer2"]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 100)
layout_mode = 2
texture = ExtResource("3_ihvs5")
expand_mode = 2
stretch_mode = 5

[node name="Label" type="Label" parent="CenterContainer/VBoxContainer/VBoxContainer2/HBoxContainer2"]
layout_mode = 2
text = "→"
label_settings = SubResource("LabelSettings_irfoa")
horizontal_alignment = 1
vertical_alignment = 1
text_direction = 1

[node name="Lang2" type="TextureRect" parent="CenterContainer/VBoxContainer/VBoxContainer2/HBoxContainer2"]
unique_name_in_owner = true
layout_mode = 2
texture = ExtResource("4_625v4")
expand_mode = 2
stretch_mode = 5

[node name="HSeparator4" type="HSeparator" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 50

[node name="GridContainer" type="GridContainer" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/h_separation = 20
theme_override_constants/v_separation = 20
columns = 2

[node name="Bt_NotionsImportantes" type="Button" parent="CenterContainer/VBoxContainer/GridContainer"]
custom_minimum_size = Vector2(200, 100)
layout_mode = 2
text = "Notions
Importantes"

[node name="Bt_Lexique" type="Button" parent="CenterContainer/VBoxContainer/GridContainer"]
custom_minimum_size = Vector2(200, 100)
layout_mode = 2
disabled = true
text = "Exemples de
discussions"

[node name="Bt_FichesCustoms" type="Button" parent="CenterContainer/VBoxContainer/GridContainer"]
custom_minimum_size = Vector2(200, 100)
layout_mode = 2
text = "Fiches"

[node name="Bt_Quiz" type="Button" parent="CenterContainer/VBoxContainer/GridContainer"]
custom_minimum_size = Vector2(200, 100)
layout_mode = 2
text = "Quiz"

[node name="HSeparator2" type="HSeparator" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 50
theme_override_styles/separator = SubResource("StyleBoxLine_fr8l7")

[node name="HBoxContainer" type="HBoxContainer" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
alignment = 1

[node name="Bt_Quitter" type="Button" parent="CenterContainer/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(100, 40)
layout_mode = 2
size_flags_horizontal = 6
text = "Quitter"

[node name="Bt_Parametres" type="Button" parent="CenterContainer/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(150, 40)
layout_mode = 2
size_flags_horizontal = 6
disabled = true
text = "Paramètres"

[connection signal="pressed" from="CenterContainer/VBoxContainer/GridContainer/Bt_NotionsImportantes" to="." method="_on_bt_notions_importantes_pressed"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/GridContainer/Bt_Lexique" to="." method="_on_bt_lexique_pressed"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/GridContainer/Bt_FichesCustoms" to="." method="_on_bt_fiches_customs_pressed"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/GridContainer/Bt_Quiz" to="." method="_on_bt_quiz_pressed"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/HBoxContainer/Bt_Quitter" to="." method="_on_bt_quitter_pressed"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/HBoxContainer/Bt_Parametres" to="." method="_on_bt_parametres_pressed"]
